# url-shortner-project

./: Cargo.toml  docker-compose.yml  readme.md
migrations/init.sql/: init.sql  url_table.sql
src/: lib.rs  main.rs
src/handlers/: mod.rs
src/routes/: mod.rs
src/services/: mod.rs
src/types/: mod.rs
