[package]
name = "url-shortner-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers", "macros"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
nanoid = "0.4.0"
serde = "1.0.192"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["cors"] }
